# Lapiz

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
docs/: Lapiz.md  Lapiz_Design.md  architecture.md  backend.md  pseudo_code.md
examples/: app_camera.c  app_camera.h  main.c  main2.c  main3.c  main4.c  main5.c  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shader_loader.c  shader_loader.h  window_ex.c
examples/shaders/: cube_shadertoy.frag  cube_shadertoy.metal  cube_shadertoy.vert  fullscreen.frag  fullscreen.metal  fullscreen.vert  instance_cube.frag  instance_cube.metal  instance_cube.vert  mesh.frag  mesh.frag.spv  mesh.metal  mesh.metallib  mesh.vert  mesh.vert.spv  text.frag  text.metal  text.vert
examples/shaders/spv/: cube_shadertoy.frag.spv  cube_shadertoy.vert.spv  fullscreen.frag.spv  instance_cube.frag.spv  instance_cube.vert.spv  mesh.frag.spv  mesh.vert.spv  text.frag.spv  text.vert.spv
include/: Lpz.h  LpzGeometry.h  LpzMath.h  LpzText.h  lapiz.h  lpz_command.h  lpz_core.h  lpz_device.h  lpz_enums.h  lpz_handles.h  lpz_platform.h  lpz_renderer.h  lpz_surface.h  lpz_transfer.h
include/LPZ/: Lpz.h  LpzGeometry.h  LpzMath.h  LpzText.h  LpzTypes.h
include/LPZ/stb/: stb_image.h  stb_truetype.h
include/Lapiz/: Ldefines.h  Lwindow.h  lapiz.h
include/Lapiz/backends/: window_api.h
include/Lapiz/backends/GLFW/: glfw_backend.h
include/Lapiz/backends/Metal/: LMTL.h
include/Lapiz/backends/OpenGL/: LGL.h
include/Lapiz/backends/Vulkan/: LVK.h
include/Lapiz/core/: Lcore.h  Lerror.h  Lio.h
include/Lapiz/graphics/: Lgraphics.h  Lshader.h  Ltexture.h
include/core/: device.h  log.h  renderer.h  text.h  window.h
include/stb/: stb_image.h  stb_truetype.h
include/utils/: geometry.h  internals.h  io.h
scripts/: compile_shaders.py
shaders/: default.frag  default.vert  ripple.frag  ripple.metal  ripple.vert
src/: LpzGeometry.c  LpzText.c  defines.h  geometry.c  graphics.h  io.c  lapiz.h  log.c  lpz.c  lpz_core.c  metal.m  metal_types.m  platform_glfw.c  platform_sdl3.c  text.c  vulkan_types.c
src/Core/: log.c  log.h
src/Platform/: platform_glfw.c  platform_metal.m  platform_sdl.c  window.h
src/backends/GLFW/: glfw_window.c
src/backends/Metal/: LMTL.m  LMTL_shader.m  LMTL_texture.m
src/backends/OpenGL/: LGL.c  LGL_shader.c  LGL_texture.c  default_shaders_gl.h
src/backends/Vulkan/: LVK.c  LVK_shader.c  LVK_texture.c  vk_default_shaders.h
src/core/: Lcore.c  Lerror.c  Lio.c
src/graphics/: Lshader.c  Ltexture.c
src/metal/: metal_device.m  metal_internal.h  metal_renderer.m  metal_surface.m  mtl_command.m  mtl_device.m  mtl_renderer.m  mtl_surface.m  mtl_transfer.m
src/platform/: platform_common.h  platform_glfw.c  platform_sdl.c  platform_sdl3.c
src/shaders/: grid.frag  grid.metal  grid.vert  prims.frag  prims.vert  scene.frag  scene.metal  scene.vert  sprite.frag  sprite.metal  sprite.vert  text.frag  text.metal  text.vert
src/shaders/spv/: grid.frag.spv  grid.vert.spv  prims.frag.spv  prims.vert.spv  scene.frag.spv  scene.vert.spv  sprite.frag.spv  sprite.vert.spv  text.frag.spv  text.vert.spv
src/vulkan/: vk_command.c  vk_device.c  vk_renderer.c  vk_surface.c  vk_transfer.c  vulkan_device.c  vulkan_internal.h  vulkan_renderer.c  vulkan_surface.c
